@@ -1,29 +1,25 @@
 language: perl
+sudo: false
 perl:
-    - "5.20"
-    - "5.18"
-    - "5.16"
-    - "5.14"
-    - "5.12"
-    - "5.10"
+  - "5.22"
+  - "5.20"
+  - "5.18"
+  - "5.16"
+  - "5.14"
+  - "5.12"
 
-matrix:
-    allow_failures:
-        - perl: "5.10"
-    fast_finish: true
-
-before_install:
-    - cpanm --notest --force Pod::Readme
+addons:
+  apt:
+    packages:
+      - pandoc
 
 install:
-    - cpanm --quiet --notest --skip-satisfied Dist::Milla
-    - cpanm --installdeps .
+  - cpanm --installdeps .
+  - cpanm --quiet --notest --skip-satisfied Dist::Milla
 
-# full release test
 script:
-    - milla smoke --release --author
+  - milla smoke --release --author
 
-# normal tests and report test coverage to coveralls.io
 after_success:
-    - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
-    - perl Build.PL && ./Build build && cover -test -report coveralls
+  - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
+  - perl Build.PL && ./Build build && cover -test -report coveralls
