@@ -1,0 +1,2 @@
+\section{Section with \emph{ÄÖÜ} and \href{http://example.org/}{link}}
+\subsection{Subsection with \textbf{äöü}}
